--- a/experiments/bot.ipynb
+++ b/experiments/bot.ipynb
@@ -17,18 +17,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 03:05:27,019 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}]\n",
-      "2024-11-17 03:05:27,870 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-11-17 03:05:28,064 - INFO - Transferring to Accounts Agent.\n",
-      "2024-11-17 03:05:28,650 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+      "2024-11-17 07:51:56,223 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To help you check your account balance, could you please provide your account ID?\n",
-      "\n",
+      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
       "\n",
       "User: ACC123\n",
       "Agent: "
@@ -38,19 +34,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 03:05:28,781 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}, {'role': 'assistant', 'content': 'To help you check your account balance, could you please provide your account ID?'}, {'role': 'user', 'content': 'ACC123'}]\n",
-      "2024-11-17 03:05:29,409 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-11-17 03:05:29,497 - INFO - Handling account balance for account ID: ACC123\n",
-      "2024-11-17 03:05:29,498 - INFO - Account ID ACC123 is valid.\n",
-      "2024-11-17 03:05:29,989 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+      "2024-11-17 07:51:56,223 - INFO - Current message history: [{'role': 'user', 'content': 'ACC123'}]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your current account balance for ACC123 is $2500.00. If there's anything else you need help with, feel free to ask!\n",
-      "\n",
+      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
       "\n",
       "User: Can you transfer $200 from ACC123 to ACC456?\n",
       "Agent: "
@@ -60,24 +51,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 03:05:30,302 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}, {'role': 'assistant', 'content': 'To help you check your account balance, could you please provide your account ID?'}, {'role': 'user', 'content': 'ACC123'}, {'role': 'assistant', 'content': \"Your current account balance for ACC123 is $2500.00. If there's anything else you need help with, feel free to ask!\"}, {'role': 'user', 'content': 'Can you transfer $200 from ACC123 to ACC456?'}]\n",
-      "2024-11-17 03:05:30,933 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-11-17 03:05:31,107 - INFO - Transferring to Payments Agent.\n",
-      "2024-11-17 03:05:31,721 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-11-17 03:05:31,873 - INFO - Transferring funds from ACC123 to ACC456 amount: $200\n",
-      "2024-11-17 03:05:31,873 - INFO - Account ID ACC123 is valid.\n",
-      "2024-11-17 03:05:31,874 - INFO - Account ID ACC456 is valid.\n",
-      "2024-11-17 03:05:31,874 - INFO - Amount 200 is valid.\n",
-      "2024-11-17 03:05:31,875 - INFO - Generated new payment ID: PAY003\n",
-      "2024-11-17 03:05:32,300 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+      "2024-11-17 07:51:56,224 - INFO - Current message history: [{'role': 'user', 'content': 'Can you transfer $200 from ACC123 to ACC456?'}]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The transfer of $200 from ACC123 to ACC456 has been successfully completed. If there's anything else I can assist you with, please let me know!\n",
-      "\n",
+      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
       "\n",
       "User: I need my bank statement for January.\n",
       "Agent: "
@@ -87,20 +68,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 03:05:32,660 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}, {'role': 'assistant', 'content': 'To help you check your account balance, could you please provide your account ID?'}, {'role': 'user', 'content': 'ACC123'}, {'role': 'assistant', 'content': \"Your current account balance for ACC123 is $2500.00. If there's anything else you need help with, feel free to ask!\"}, {'role': 'user', 'content': 'Can you transfer $200 from ACC123 to ACC456?'}, {'role': 'assistant', 'content': \"The transfer of $200 from ACC123 to ACC456 has been successfully completed. If there's anything else I can assist you with, please let me know!\"}, {'role': 'user', 'content': 'I need my bank statement for January.'}]\n",
-      "2024-11-17 03:05:33,325 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-11-17 03:05:33,700 - INFO - Transferring back to Triage Agent.\n",
-      "2024-11-17 03:05:34,382 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-11-17 03:05:34,421 - INFO - Transferring to Accounts Agent.\n",
-      "2024-11-17 03:05:35,720 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+      "2024-11-17 07:51:56,224 - INFO - Current message history: [{'role': 'user', 'content': 'I need my bank statement for January.'}]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To retrieve your bank statement for January, please provide your account ID.\n",
-      "\n",
+      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
       "\n",
       "User: I want to cancel my scheduled payment PAY001.\n",
       "Agent: "
@@ -110,21 +85,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 03:05:35,943 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}, {'role': 'assistant', 'content': 'To help you check your account balance, could you please provide your account ID?'}, {'role': 'user', 'content': 'ACC123'}, {'role': 'assistant', 'content': \"Your current account balance for ACC123 is $2500.00. If there's anything else you need help with, feel free to ask!\"}, {'role': 'user', 'content': 'Can you transfer $200 from ACC123 to ACC456?'}, {'role': 'assistant', 'content': \"The transfer of $200 from ACC123 to ACC456 has been successfully completed. If there's anything else I can assist you with, please let me know!\"}, {'role': 'user', 'content': 'I need my bank statement for January.'}, {'role': 'assistant', 'content': 'To retrieve your bank statement for January, please provide your account ID.'}, {'role': 'user', 'content': 'I want to cancel my scheduled payment PAY001.'}]\n",
-      "2024-11-17 03:05:36,587 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-11-17 03:05:36,737 - INFO - Transferring to Payments Agent.\n",
-      "2024-11-17 03:05:37,352 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-11-17 03:05:37,414 - INFO - Cancelling payment with ID: PAY001\n",
-      "2024-11-17 03:05:37,415 - INFO - Payment ID PAY001 is valid.\n",
-      "2024-11-17 03:05:37,905 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+      "2024-11-17 07:51:56,224 - INFO - Current message history: [{'role': 'user', 'content': 'I want to cancel my scheduled payment PAY001.'}]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The scheduled payment with ID PAY001 has been successfully canceled. If you have any more requests or need further assistance, please let me know!\n",
-      "\n",
+      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
       "\n"
      ]
     }
