--- a/experiments/bot.ipynb
+++ b/experiments/bot.ipynb
@@ -17,14 +17,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 07:51:56,223 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}]\n"
+      "2024-11-17 07:58:09,042 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}]\n",
+      "2024-11-17 07:58:09,486 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-11-17 07:58:09,668 - INFO - Transferring to Accounts Agent.\n",
+      "2024-11-17 07:58:10,050 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
+      "To assist you with checking your account balance, I need your account ID. Could you please provide it?\n",
+      "\n",
       "\n",
       "User: ACC123\n",
       "Agent: "
@@ -34,14 +38,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 07:51:56,223 - INFO - Current message history: [{'role': 'user', 'content': 'ACC123'}]\n"
+      "2024-11-17 07:58:10,248 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}, {'role': 'assistant', 'content': 'To assist you with checking your account balance, I need your account ID. Could you please provide it?'}, {'role': 'user', 'content': 'ACC123'}]\n",
+      "2024-11-17 07:58:10,783 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-11-17 07:58:10,809 - INFO - Handling account balance for account ID: ACC123\n",
+      "2024-11-17 07:58:10,810 - INFO - Account ID ACC123 is valid.\n",
+      "2024-11-17 07:58:11,223 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
+      "Your current account balance for account ID ACC123 is $2,500.00. If there's anything else you need, feel free to ask!\n",
+      "\n",
       "\n",
       "User: Can you transfer $200 from ACC123 to ACC456?\n",
       "Agent: "
@@ -51,14 +60,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 07:51:56,224 - INFO - Current message history: [{'role': 'user', 'content': 'Can you transfer $200 from ACC123 to ACC456?'}]\n"
+      "2024-11-17 07:58:11,518 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}, {'role': 'assistant', 'content': 'To assist you with checking your account balance, I need your account ID. Could you please provide it?'}, {'role': 'user', 'content': 'ACC123'}, {'role': 'assistant', 'content': \"Your current account balance for account ID ACC123 is $2,500.00. If there's anything else you need, feel free to ask!\"}, {'role': 'user', 'content': 'Can you transfer $200 from ACC123 to ACC456?'}]\n",
+      "2024-11-17 07:58:12,019 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-11-17 07:58:12,130 - INFO - Transferring to Payments Agent.\n",
+      "2024-11-17 07:58:13,216 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-11-17 07:58:13,374 - INFO - Transferring funds from ACC123 to ACC456 amount: $200\n",
+      "2024-11-17 07:58:13,375 - INFO - Account ID ACC123 is valid.\n",
+      "2024-11-17 07:58:13,375 - INFO - Account ID ACC456 is valid.\n",
+      "2024-11-17 07:58:13,375 - INFO - Amount 200 is valid.\n",
+      "2024-11-17 07:58:13,376 - INFO - Generated new payment ID: PAY003\n",
+      "2024-11-17 07:58:13,816 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
+      "The transfer of $200.00 from account ACC123 to ACC456 has been successfully completed. If you need any further assistance, feel free to ask!\n",
+      "\n",
       "\n",
       "User: I need my bank statement for January.\n",
       "Agent: "
@@ -68,14 +87,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 07:51:56,224 - INFO - Current message history: [{'role': 'user', 'content': 'I need my bank statement for January.'}]\n"
+      "2024-11-17 07:58:14,058 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}, {'role': 'assistant', 'content': 'To assist you with checking your account balance, I need your account ID. Could you please provide it?'}, {'role': 'user', 'content': 'ACC123'}, {'role': 'assistant', 'content': \"Your current account balance for account ID ACC123 is $2,500.00. If there's anything else you need, feel free to ask!\"}, {'role': 'user', 'content': 'Can you transfer $200 from ACC123 to ACC456?'}, {'role': 'assistant', 'content': 'The transfer of $200.00 from account ACC123 to ACC456 has been successfully completed. If you need any further assistance, feel free to ask!'}, {'role': 'user', 'content': 'I need my bank statement for January.'}]\n",
+      "2024-11-17 07:58:14,462 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
+      "I'm unable to directly provide bank statements. Please log in to your online banking account or mobile app to access and download your bank statement for January. If you have any other questions or need assistance with a payment, feel free to ask!\n",
+      "\n",
       "\n",
       "User: I want to cancel my scheduled payment PAY001.\n",
       "Agent: "
@@ -85,14 +106,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-17 07:51:56,224 - INFO - Current message history: [{'role': 'user', 'content': 'I want to cancel my scheduled payment PAY001.'}]\n"
+      "2024-11-17 07:58:14,833 - INFO - Current message history: [{'role': 'user', 'content': 'I would like to check my account balance.'}, {'role': 'assistant', 'content': 'To assist you with checking your account balance, I need your account ID. Could you please provide it?'}, {'role': 'user', 'content': 'ACC123'}, {'role': 'assistant', 'content': \"Your current account balance for account ID ACC123 is $2,500.00. If there's anything else you need, feel free to ask!\"}, {'role': 'user', 'content': 'Can you transfer $200 from ACC123 to ACC456?'}, {'role': 'assistant', 'content': 'The transfer of $200.00 from account ACC123 to ACC456 has been successfully completed. If you need any further assistance, feel free to ask!'}, {'role': 'user', 'content': 'I need my bank statement for January.'}, {'role': 'assistant', 'content': \"I'm unable to directly provide bank statements. Please log in to your online banking account or mobile app to access and download your bank statement for January. If you have any other questions or need assistance with a payment, feel free to ask!\"}, {'role': 'user', 'content': 'I want to cancel my scheduled payment PAY001.'}]\n",
+      "2024-11-17 07:58:15,317 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-11-17 07:58:15,411 - INFO - Cancelling payment with ID: PAY001\n",
+      "2024-11-17 07:58:15,412 - INFO - Payment ID PAY001 is valid.\n",
+      "2024-11-17 07:58:16,175 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agent: An error occurred: 'TriageAgent' object has no attribute 'model'\n",
+      "The scheduled payment with ID PAY001 has been successfully canceled. If there's anything else you need help with, feel free to let me know!\n",
+      "\n",
       "\n"
      ]
     }
